# Orient

./: .gitignore  README.md  get_features.cpp  get_image.cpp  get_intrinsics.cpp  main.cpp
C++/: CMakeLists.txt  README.md  camera.cpp  camera.h  defs.cpp  defs.h  estimator.cpp  estimator.h  image.cpp  image.h  main.cpp  rotation.cpp  rotation.h  sensor.cpp  sensor.h
C++/LpSensor/include/: DeviceListItem.h  ImuData.h  LpmsDefinitions.h  LpmsSensorI.h  LpmsSensorManagerI.h
C++/examples/: calibratecamera.cpp  helloworld.cpp
C++examples/: calibratecamera.cpp  estimatelive.cpp  recorddata.cpp  sensortest.cpp
Calib/: calib.parameters  calib.results
Camera/: defs.hpp  get_image.cpp  get_intrinsics.cpp  get_rotation.cpp  get_rotationH.cpp  get_rotationSVD.cpp  get_rotationv2.cpp  get_rotationv3.cpp  makefile
LPMS/: CMakeLists.txt  main.cpp
Matlab/: README.md  estimator.m  fullProcrustes.m  generateAngles.m  getRmatrix.m  imuerror.m  main.m  main.m~  matrixToAxisAngle.m  minBackProject.m  objectiveFun.m  plotError.m  ransacByProcrustes.m  runAll.m  runAll.m~  runReality.m  runSimulation.m  showScenario.m  simplereal.m  simulator.m  untitled.m  untitled.m~  workshop.m  workshop.m~
Matlab/diverge/: constant_simulator.m  diverge.m  generateAngles.m  getRmatrix.m  minBackProject.m  noiseGen.m  objectiveFun.m  output.txt
Matlab/estimator/: adjustFFrobeniusNorm.m  estimator.m  getNormalizationMatrix.m  minBackProject.m  minEpipolarError.m  minEpipolarGradient.m  norm8point.m  objectiveFunGRAT.m  objectiveFunGRAT.m~  objectiveFunMBPE.m  objectiveFunMEE.m  orthProcrustesProb.m  orthProcrustesProb.m~  recoverPoseFromF.m
Matlab/helpers/: createHistogram.m  findEntropy.m  plotError.m  plotError.m~  ransacByProcrustes.m  safeMean.m  whichImageSections.m
Matlab/reality/: runReality.m  runReality.m~
Matlab/simulator/: falseMatchesGen.m  generateAngles.m  noiseGen.m  runSimulation.m  runSimulation.m~  simulator.m
image_proc/: main.cpp
image_proc/Camera/: get_intrinsics.cpp  get_rotationH.cpp  get_rotationProcrustes.cpp  intrinsics.xml  keypoints.txt
input/: README.md  calibrationSession.mat
neural_networks/: quat_euler.py  quat_generator.py
rotation1/: sensor_rotation.txt
trash/: fullProcrustes.m  main.m  matlabProcrustes.m
trash/LPMS/: main.cpp
(+230 files in other folders)
